--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "mongodb": "^3.5.9",
     "morgan": "^1.10.0"
