--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node Server.js",
-    "dev": "concurrently \"nodemon Server.js\" \"cd client && npm run start\""
+    "dev": "concurrently \"nodemon Server.js\" \"cd client && npm run start\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix ./client"
   },
   "author": "",
   "license": "ISC",
